custom-manifests/muj-web/muj-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: muj-web-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: mujweb.lan # Doména, přes kterou budeme k aplikaci přistupovat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: muj-web-service # Směrujeme na Service vytvořenou v předchozím kroku
                port:
                  number: 80
